# Contacts

./: LICENSE  README.md
Contacts/ContactsCmdClient/: CMakeLists.txt  CommunicationManager.cpp  ContactsManager.cpp
Contacts/ContactsGUIClient/: CMakeLists.txt  CommunicationManager.cpp  CommunicationManager.h  ContactDialog.cpp  ContactDialog.h  ContactDialog.ui  ContactsManager.cpp  ContactsManager.h  Main.cpp  MainDialog.cpp  MainDialog.h  MainDialog.ui  Queue.h  ResponseManager.cpp  ResponseManager.h
Contacts/ContactsServer/: ContactsHandler.py  ContactsServer.py  Database.py  MessageHandler.py
ContactsCmdClient/: CommunicationManager.h  Contact.h  ContactsManager.h  client.cpp
